Fixed overflow x so that the landing page image were no longer clipped

--- a/portfolio.css
+++ b/portfolio.css
@@ -79,7 +79,7 @@ body {
     animation-delay: 4.8s;
     animation-timing-function: ease-in;
     animation-fill-mode: forwards;
-    overflow: hidden;
+    
     margin-top: 300px;
 
 }
